# CMAKE FILE : shLighting/moennen/2017-12-19

CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 

PROJECT(shLighting)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(MOENNEN_LOCAL /usr/local)
SET(MOENNEN_WKSPCE /home/moennen)
SET(M_INC ${MOENNEN_LOCAL}/include)
SET(M_LIBS ${MOENNEN_LOCAL}/lib)
SET(M_LIBS64 ${MOENNEN_LOCAL}/lib64)

INCLUDE_DIRECTORIES(
	${MOENNEN_WKSPCE}/sceneIllEst
	${M_INC}
	${M_INC}/GL
	${M_INC}/eigen3
)
LINK_DIRECTORIES(
	${M_LIBS}
	${M_LIBS64}
)

ADD_EXECUTABLE(shLighting shLighting_main.cpp)

TARGET_LINK_LIBRARIES( shLighting
	boost_thread boost_system GL SDL2 opencv_world )

