# CMAKE FILE : testUtils/moennen/2017-12-19

CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 

PROJECT(testUtils)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)

#SET(MOENNEN_LOCAL /mnt/p4/favila/moennen/local)
#SET(MOENNEN_WKSPCE /mnt/p4/avila/moennen_wkspce)
SET(MOENNEN_LOCAL /usr/local)
SET(MOENNEN_WKSPCE /home/moennen)
SET(M_INC ${MOENNEN_LOCAL}/include)
SET(M_LIBS ${MOENNEN_LOCAL}/lib)
SET(M_LIBS64 ${MOENNEN_LOCAL}/lib64)

INCLUDE_DIRECTORIES(
	${MOENNEN_WKSPCE}/sceneIllEst
	${M_INC}
	${M_INC}/GL
	${M_INC}/eigen3
)
LINK_DIRECTORIES(
	${M_LIBS}
	${M_LIBS64}
)

ADD_EXECUTABLE(testUtils testUtils_main.cpp)

TARGET_LINK_LIBRARIES( testUtils GL GLU glut SDL opencv_world )

